# trajectory_generator

./: .gitignore  CMakeLists.txt  package.xml
app/: CMakeLists.txt
app/conf/: trajectory_generator.ini
include/: trajectory_generator.h  trajectory_generator_module.hpp  trajectory_generator_thread.h
include/trajectory_generator/: bezier_curve.h  curves_types.h  trajectory_generator.h
src/: bezier_curve.cpp  main.cpp  trajectory_generator.cpp  trajectory_generator_thread.cpp  valve_trajectory_generator.cpp
