<?xml version="1.0"?>
<package>
  <name>trajectory_generator</name>
  <version>0.0.0</version>
  <description>The trajectory_generator package</description>

  <maintainer email="ale@todo.todo">ale</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>octomap_msgs</run_depend>

  <export>
  </export>
</package>